Add static prefix to extra files neede by layout.

--- a/views/layout.html
+++ b/views/layout.html
@@ -9,16 +9,16 @@
 <title>DoomSpy</title>
 <meta name="description" content="DoomSpy is a web-based server browser for Doom.  Supports online-capable Doom source ports such as Zandronum, Odamex, Chocolate Doom and Vavoom.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
-<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+<link rel="stylesheet" href="{{ static }}css/normalize.css">
+<link rel="stylesheet" href="{{ static }}css/main.css">
+<script src="{{ static }}js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
 {{{ yield }}}
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+<script src="{{ static }}js/plugins.js"></script>
+<script src="{{ static }}js/main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
