Introduce zebra-stripes for table.
This involved fixing the table HTML while I was at it...

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -97,21 +97,13 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+tr:nth-child(odd) td {
+	background:white;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+tr:nth-child(even) td {
+	background:lightgray;
+}
 
 /* ==========================================================================
    Helper classes
