--- a/views/servers.html
+++ b/views/servers.html
@@ -1,4 +1,5 @@
 <h1>Server List</h1>
+{{#servers.length}}
 <table>
 	<tr>
 		<th>Name</th>
@@ -15,3 +16,9 @@
 	</tr>
 	{{/servers}}
 </table>
+{{/servers.length}}
+{{^servers}}
+<p>
+	No servers found.  Please wait a few moments for the server list to populate...
+</p>
+{{/servers}}
