Show address and number of players per server.
This, of course, adds queries that update the player list, show the
number of players on the front end, and even open up another REST
endpoint for players.  Oh, and there's even a logo as well.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -97,6 +97,12 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+body {
+	background-image:url('/static/img/logo64.png');
+	background-repeat:no-repeat;
+	background-position:right 16px top 16px;
+}
+
 tr:nth-child(odd) td {
 	background:white;
 }
