Add legalese to footer.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -111,6 +111,11 @@ tr:nth-child(even) td {
 	background:lightgray;
 }
 
+footer {
+	color:gray;
+	font-size: 75%;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
